va wrap max width parent fix

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -143,6 +143,7 @@ html.no-flexbox {
 
 /* vertical align */
 .va-wrap, .va-m, .va-b { display: table; width: 100%; height: 100%; }
+.va-wrap { table-layout: fixed; }
 .va-m, .va-b { display: table-cell; }
 .va-m { vertical-align: middle; }
 .va-b { vertical-align: bottom; }
